--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,10 @@ body {
 .reserve {
     border: 2px solid #f7f7f9;
 }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
